--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
-"dependencies": {
-  "express": "^4.18.2",
-  "ws": "^8.13.0",
-  "axios": "^1.6.7",
-  "cheerio": "^1.0.0-rc.12"
+{
+  "name": "bls-ws-server",
+  "version": "1.0.0",
+  "description": "WebSocket server for BLS visa monitoring with Telegram alerts",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
+  }
 }
