--- a/package.json
+++ b/package.json
@@ -1,15 +1,40 @@
 {
-  "name": "bls-ws-server",
+  "name": "bls-appointment-monitor",
   "version": "1.0.0",
-  "description": "WebSocket server for BLS visa monitoring with Telegram alerts",
+  "description": "Advanced BLS Appointment Availability Monitor with WebSocket and Telegram Alerts",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest --watchAll",
+    "lint": "eslint .",
+    "keep-alive": "node keep-alive.js"
   },
+  "keywords": [
+    "bls",
+    "appointment",
+    "monitor",
+    "visa",
+    "telegram",
+    "websocket"
+  ],
+  "author": "Your Name",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
+    "node-cron": "^3.0.2",
     "ws": "^8.13.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "type": "module"
 }
